<resources>
    <string name="app_name">Meat Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="dialog_confirm_cancel_msg">Do you want to discard your changes?</string>
    <string name="dialog_confirm_delete_msg">Are you sure you want to delete \"%s\"?</string>
    <string name="dialog_confirm_delete_msg_default">
        Are you sure you want to delete this item?
    </string>
    <string name="action_edit_locations">Edit locations</string>
    <string name="action_edit_meat_types">Edit meat types</string>
    <string name="action_edit_products">Edit products</string>
    <string name="action_add_meat_type">Add new meat type</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_meat_type">Sort by meat type</string>
    <string name="action_sort_by_amount_asc">Sort by amount (low-high)</string>
    <string name="action_sort_by_amount_desc">Sort by amount (high-low)</string>
    <string name="action_sort_by_location">Sort by location</string>
    <string name="action_order_history">Order history</string>
    <string name="action_current_orders">Current orders</string>
    <string name="action_favourites">Favourites</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lbs">lbs</string>
    <string name="amount_kg">%s kg</string>
    <string name="amount_lbs">%s lbs</string>
    <plurals name="amount_boxes">
        <item quantity="one">%d box</item>
        <item quantity="other">%d boxes</item>
    </plurals>
    <string name="db_error_insert">Error adding %s</string>
    <string name="db_error_update">Error saving %s</string>
    <string name="db_error_insert_product">Error adding product</string>
    <string name="db_error_delete">Error deleting %s</string>
    <string name="db_delete_stock_success">Deleted %s from %s</string>
    <string name="db_delete_order_success">Deleted order</string>
    <string name="db_delete_order_error">Error deleting order</string>
    <string name="db_delete_contract_success">Deleted contract</string>
    <string name="db_delete_contract_error">Error deleting contract</string>
    <string name="db_error_delete_meat_type">
        Cannot delete %s while products still exist
    </string>
    <string name="db_error_delete_product">
        Cannot delete %s while stock, contracts or orders still exist
    </string>
    <string name="db_error_delete_location">
        Cannot delete %s while stock, contracts or orders still exist
    </string>
    <string name="db_backup_success">Database saved to\n%s</string>
    <string name="db_backup_error">Error exporting database</string>
    <string name="db_import_success">Database imported successfully</string>
    <string name="db_import_error">Error importing database</string>
    <string name="perm_error_storage_denied">
        Please allow external storage permissions for this feature.
    </string>
    <string name="search_title">Search</string>
    <string name="search_add_new">Add new %s…</string>
    <string name="search_no_matches">No matching results found</string>
    <string name="input_error_blank">Cannot be blank</string>
    <string name="input_error_invalid">Invalid input</string>
    <string name="input_error_non_zero">Input must be non-zero</string>
    <string name="input_error_duplicate">Already added</string>
    <string name="input_error_invalid_email">Invalid email</string>
    <string name="input_error_invalid_location_type">
        Invalid location type. Please select from the dropdown.
    </string>
    <string name="input_error_stock_already_in_location">
        This product has already been added with this supplier in this location.
    </string>
    <string name="input_error_time_must_be_future">
        Please select a time at least 10 minutes from now
    </string>
    <string name="input_error_blank_date">Please select a date</string>
    <string name="snackbar_item_deleted">Item deleted</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_no_data">No data to show</string>
    <string name="dashboard_filter_locations_all">ALL</string>
    <string name="stock_title">Stock</string>
    <string name="stock_empty">No stock to show</string>
    <string name="stock_new_title">Add new stock</string>
    <string name="stock_edit_title">Edit stock</string>
    <string name="stock_product_new">Add new product</string>
    <string name="stock_product_input_name">Name</string>
    <string name="stock_product_input_meat_type">Meat type</string>
    <string name="stock_product_meat_type_new">Add new meat type</string>
    <string name="stock_product_meat_type_new_confirm">Do you want to add it?</string>
    <string name="stock_product_meat_type_input">Meat type</string>
    <string name="stock_input_product">Product</string>
    <string name="stock_input_supplier">Supplier</string>
    <string name="stock_input_quantity_kg">Quantity (kg)</string>
    <string name="stock_input_quantity_lbs">Quantity (lbs)</string>
    <string name="stock_input_quantity_boxes">Number of boxes</string>
    <string name="stock_input_location">Location</string>
    <string name="stock_input_destination">Destination</string>
    <string name="stock_input_quality">Quality</string>
    <string name="stock_details_title">Stock details</string>
    <string name="stock_details_quantity">Quantity:</string>
    <string name="stock_details_quantity_boxes">No. of boxes:</string>
    <string name="stock_details_supplier">Supplier:</string>
    <string name="stock_details_destination">Destination:</string>
    <string name="stock_details_quality">Quality:</string>
    <string name="stock_location_tag">%s &#8226; %s</string>
    <string name="meat_types_empty">No meat types to show</string>
    <string name="meat_types_title">Meat Types</string>
    <string name="add_meat_type_success">Success adding %s</string>
    <string name="add_meat_type_error">Error adding %s</string>
    <string name="products_empty">No products to show</string>
    <string name="products_title">Products</string>
    <string name="locations_title">Locations</string>
    <string name="locations_type_supplier">Supplier</string>
    <string name="locations_type_storage">Storage</string>
    <string name="locations_type_destination">Destination</string>
    <string name="locations_new">Add new location</string>
    <string name="locations_input_name">Name</string>
    <string name="locations_input_type">Type:</string>
    <string name="locations_input_email">Email</string>
    <string name="locations_input_phone">Phone</string>
    <string name="locations_input_addr_line_1">Address line 1</string>
    <string name="locations_input_addr_line_2">Address line 2</string>
    <string name="locations_input_city">City</string>
    <string name="locations_input_postcode">Postcode</string>
    <string name="locations_input_country">Country</string>
    <string name="locations_empty">No locations to show</string>
    <string name="locations_add_new_title">Add new %s</string>
    <string name="location_edit_title">Edit %s</string>
    <string name="location_details_title">Location details</string>
    <string name="location_delete_success">Location deleted successfully</string>
    <string name="location_delete_error">Cannot delete location</string>
    <string name="location_undo_delete_error">Cannot undo action</string>
    <string name="orders_title">Orders</string>
    <string name="orders_history_title">Order history</string>
    <string name="orders_empty">No orders to show</string>
    <string name="orders_input_product">Product</string>
    <string name="orders_input_quantity_kg">Quantity (kg)</string>
    <string name="orders_input_quantity_lbs">Quantity (lbs)</string>
    <string name="orders_input_quantity_boxes">Number of boxes</string>
    <string name="orders_add_product">Add another product</string>
    <string name="orders_input_destination">Destination</string>
    <string name="orders_input_date">Date</string>
    <string name="orders_input_completed">Completed</string>
    <string name="orders_new_title">Add new order</string>
    <string name="order_edit_title">Edit order</string>
    <string name="order_details_title">Order details</string>
    <string name="order_alert_upcoming_tomorrow">Upcoming order tomorrow</string>
    <string name="contracts_title">Contracts</string>
    <string name="contracts_empty">No contracts to show</string>
    <string name="contracts_input_destination">Add destination</string>
    <string name="contracts_select_destination_title">Select destination</string>
    <string name="contracts_input_repeat_interval">Repeat</string>
    <string name="contracts_input_repeat_on">On…</string>
    <string name="contracts_input_product">Add product</string>
    <string name="contracts_select_product_title">Select product</string>
    <string name="contracts_input_quantity_kg">Quantity (kg)</string>
    <string name="contracts_input_quantity_lbs">Quantity (lbs)</string>
    <string name="contracts_input_quantity_boxes">Number of boxes</string>
    <string name="contracts_add_product">Add another product</string>
    <string name="contracts_reminder_hint">Reminder</string>
    <string name="contracts_reminder_off_hint">Reminder (off)</string>
    <string name="contracts_reminder_day_before_one">day before</string>
    <plurals name="contracts_reminder_days_before">
        <item quantity="one">@string/contracts_reminder_day_before_one</item>
        <item quantity="other">days before</item>
    </plurals>
    <plurals name="contract_reminder_display">
        <item quantity="one">Reminder %d day in advance</item>
        <item quantity="other">Reminder %d days in advance</item>
    </plurals>
    <string name="contract_reminder_display_off">No reminder set</string>
    <string name="contracts_dialog_repeat_interval_title">Repeat every…</string>
    <string name="contracts_dialog_repeat_interval_week">Every week</string>
    <string name="contracts_dialog_repeat_interval_two_week">Every two weeks</string>
    <string name="contracts_dialog_repeat_interval_month">Every month</string>
    <string name="contracts_dialog_repeat_interval_custom">Custom</string>
    <string name="exchange_title">Exchange</string>
    <string name="settings_title">Settings</string>
    <string name="settings_mass_unit">Unit of mass to use</string>
    <string name="settings_default_reminder_time">Default reminder time (days)</string>
    <string name="settings_backup_db">Backup database</string>
    <string name="settings_restore_db">Restore database from backup</string>
    <string name="settings_dark_theme">Theme</string>
    <string name="tutorial_meat_types_title">Add meat types</string>
    <string name="tutorial_meat_types_suggested_title">Suggested:</string>
    <string name="tutorial_meat_types_add_custom">Add a custom meat type</string>
    <string name="tutorial_meat_types_custom_title">Add custom meat type</string>
    <string name="tutorial_meat_types_custom_hint">Custom meat type</string>
    <string name="tutorial_meat_types_custom_done">Done</string>
    <string name="tutorial_mass_unit_title">Choose mass unit</string>
    <string name="tutorial_mass_unit_kgs">Kilograms\n(kg)</string>
    <string name="tutorial_mass_unit_lbs">Pounds\n(lbs)</string>
</resources>