<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:icon="@drawable/ic_undo"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_redo"
        android:title="@string/action_redo"
        android:icon="@drawable/ic_redo"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_sort_by"
        android:title="@string/action_sort_by"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom"
        >
        <menu>
            <group android:id="@+id/group_sort_by"
                android:checkableBehavior="single">

                <item android:id="@+id/action_sort_by_name"
                    android:title="@string/action_sort_by_name"
                    />

                <item android:id="@+id/action_sort_by_location"
                    android:title="@string/action_sort_by_location"
                    />

                <item android:id="@+id/action_sort_by_amount_desc"
                    android:title="@string/action_sort_by_amount_desc"
                    />

                <item android:id="@+id/action_sort_by_amount_asc"
                    android:title="@string/action_sort_by_amount_asc"
                    />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_edit_products"
        android:title="@string/action_edit_products"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_edit_locations"
        android:title="@string/action_edit_locations"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_edit_meat_types"
        android:title="@string/action_edit_meat_types"
        app:showAsAction="never"
        />

</menu>