<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard_title"
            />
        <item
            android:id="@+id/nav_stock"
            android:icon="@drawable/ic_stock"
            android:title="@string/stock_title"
            />
        <item
            android:id="@+id/nav_contracts"
            android:icon="@drawable/ic_contracts"
            android:title="@string/contracts_title"
            />
        <item
            android:id="@+id/nav_exchange"
            android:icon="@drawable/ic_exchange"
            android:title="@string/exchange_title"
            />
    </group>

    <group
        android:id="@+id/settings_group"
        >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_title"
            />
    </group>

</menu>
