<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="36dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/nav_dashboard"
        style="@style/NavDrawerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:drawableStart="@drawable/ic_dashboard"
        android:text="@string/dashboard_title"
        />

    <TextView
        android:id="@+id/nav_stock"
        style="@style/NavDrawerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_dashboard"
        android:drawableStart="@drawable/ic_stock"
        android:text="@string/stock_title"
        />

    <TextView
        android:id="@+id/nav_contracts"
        style="@style/NavDrawerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_stock"
        android:drawableStart="@drawable/ic_contracts"
        android:text="@string/contracts_title"
        />

    <TextView
        android:id="@+id/nav_exchange"
        style="@style/NavDrawerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_contracts"
        android:drawableStart="@drawable/ic_exchange"
        android:text="@string/exchange_title"
        />

    <TextView
        android:id="@+id/nav_settings"
        style="@style/NavDrawerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableStart="@drawable/ic_settings"
        android:text="@string/settings_title"
        />

</RelativeLayout>