<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    >

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:paddingStart="40dp"
        android:paddingTop="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="bottom"
        />


    <TextView
        android:id="@+id/nav_dashboard"
        style="@style/NavDrawerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_dashboard"
        android:text="@string/dashboard_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/nav_stock"
            style="@style/NavDrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_stock"
            android:text="@string/stock_title"
            />

        <TextView
            android:id="@+id/nav_contracts"
            style="@style/NavDrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_contracts"
            android:text="@string/contracts_title"
            />

        <TextView
            android:id="@+id/nav_exchange"
            style="@style/NavDrawerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_exchange"
            android:text="@string/exchange_title"
            />
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/nav_settings"
        style="@style/NavDrawerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings"
        android:text="@string/settings_title"
        />

</LinearLayout>