<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:windowBackground"
    android:orientation="vertical"
    >

    <TextView
        style="?dialogTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin_horizontal"
        android:layout_marginTop="@dimen/dialog_margin_vertical"
        android:layout_marginEnd="@dimen/dialog_margin_horizontal"
        android:layout_marginBottom="@dimen/input_spacing_vertical"
        android:text="@string/stock_product_new"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin_horizontal"
        android:layout_marginEnd="@dimen/dialog_margin_horizontal"
        android:layout_marginBottom="@dimen/input_spacing_vertical"
        android:hint="@string/stock_product_input_name"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_meat_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin_horizontal"
        android:layout_marginEnd="@dimen/dialog_margin_horizontal"
        android:layout_marginBottom="@dimen/input_spacing_vertical"
        android:hint="@string/stock_product_input_meat_type"
        >

        <AutoCompleteTextView
            android:id="@+id/edit_text_meat_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_margin_horizontal"
        android:layout_marginEnd="@dimen/dialog_margin_horizontal"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_cancel"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_done"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_done"
            />
    </LinearLayout>

</LinearLayout>