<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryDark"
    >

    <TextView
        android:id="@+id/title"
        style="@style/TutorialTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/meat_types_layout"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/tutorial_meat_types_title"
        />

    <LinearLayout
        android:id="@+id/meat_types_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="84dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title_suggested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_meat_types_suggested_title"
            android:textColor="@color/tutorial_text_secondary"
            android:textSize="14sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_meat_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:itemCount="4"
            tools:listitem="@layout/item_tutorial_meat_type"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_custom_meat_type"
        style="@style/TutorialButtonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/tutorial_meat_types_add_custom"
        /> <!-- bottom bar is 56 dp in activity layout -->

    <RelativeLayout
        android:id="@+id/green_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green"
        android:elevation="20dp"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/title_custom"
            style="@style/TutorialTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_custom_meat_type"
            android:layout_marginBottom="64dp"
            android:gravity="center_horizontal|bottom"
            android:text="@string/tutorial_meat_types_custom_title"
            />

        <LinearLayout
            android:id="@+id/layout_custom_meat_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="84dp"
            android:layout_marginEnd="84dp"
            android:elevation="2dp"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/edit_text_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/tutorial_text_secondary"
                android:hint="@string/tutorial_meat_types_custom_hint"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:textColorHint="@color/tutorial_text_secondary"
                />

            <Button
                android:id="@+id/btn_custom_done"
                style="@style/TutorialButtonSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/tutorial_meat_types_custom_done"
                />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>