<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    >

    <!-- title -->
    <TextView
        android:id="@+id/title"
        style="@style/TutorialTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/themes_layout"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/tutorial_mass_unit_title"
        />

    <LinearLayout
        android:id="@+id/themes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        >

        <!-- kg button -->
        <TextView
            android:id="@+id/kgs"
            style="@style/TutorialButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:text="@string/tutorial_mass_unit_kgs"
            />

        <!-- lbs button -->
        <TextView
            android:id="@+id/lbs"
            style="@style/TutorialButtonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="64dp"
            android:layout_weight="1"
            android:text="@string/tutorial_mass_unit_lbs"
            />

    </LinearLayout>
</RelativeLayout>